k8s/pharmacy-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
spec:
  type: LoadBalancer
  selector:
    app: pharmacy-api
  ports:
    - port: 80
      targetPort: 5000
