k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
spec:
  type: NodePort
  selector:
    app: pharmacy-api
  ports:
    - port: 80              # 클러스터 내부 접근 포트
      targetPort: 5000      # 컨테이너에서 Flask가 열고 있는 포트
      nodePort: 30001       # 외부에서 접근할 수 있는 포트 (고정)
